--- a/style.css/info.css
+++ b/style.css/info.css
@@ -10,11 +10,14 @@
     --primary-color: #ff00d9;
     --secondary-color:#0040ff;
 }
+
 body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
-    background-repeat: no-repeat;
-    height: 950vh;
+    background-position: center center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
     font-family: 'Roboto', "Open sans", sans-serif;
 }
 
@@ -56,8 +59,6 @@ p {
    font-size: 1.5rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-
 
 
 h2 {
@@ -396,22 +397,16 @@ label[for="menu-bar"]  {
         font-weight: 500;
     }
     
-    body {
-        height: 578vh;
-    }
     
     
 }
 
 @media (max-width: 809px) {
 
-    #program {
+    #information {
         color: var(--primary-color);
     }
    
-    body {
-        height: 561vh;
-    }
     
     h1 {
         font-size: 3rem;
@@ -557,35 +552,28 @@ label[for="menu-bar"]  {
            
         }
         
-    header .navbar ul li a:active + ul,
-    header .navbar ul li a:focus + ul {
-        display: block; /* Viser dropdown på klik i mobil */
+        header .navbar ul li a:active + ul,
+        header .navbar ul li a:focus + ul {
+            display: block; /* Viser dropdown på klik i mobil */
        
-    }
+        }
 
-    header .navbar ul li:hover > ul {
-        display: none; /* Hover er slået fra i mobilvisning */
-    }
+        header .navbar ul li:hover > ul {
+            display: none; /* Hover er slået fra i mobilvisning */
+        }
                 
 
-    p {
-        text-align: start;
-        font-size: 1.5rem;
-        margin: 25px 0px;
-        font-weight: 500;
-        line-break: auto;
-    }
-
-    
-
+        p {
+            text-align: start;
+            font-size: 1.5rem;
+            margin: 25px 0px;
+            font-weight: 500;
+            line-break: auto;
+        }
     }
 
     @media (max-width: 610px) {
    
-        body {
-            height: 675vh;
-        }
-
         main {
             margin: 20px 55px;
         }
@@ -615,40 +603,33 @@ label[for="menu-bar"]  {
             margin: 30px 0;
         }
         .footer {
-      
-            
             padding: 10px;
              }
                          
-             #logo {
+        #logo {
              display: none;
              }
                          
-             #adresse {
+        #adresse {
              width: 40%;
              margin-top: -16px;
              margin-left: 10px;
              }
                          
                          
-             #insta {
+        #insta {
              width: 100%;
              }
 
-             iframe {
+        iframe {
                 display: none;
             }
                   
-       
             }
 
     
  @media (max-width: 478px) {
    
-    body {
-        height: 725vh;
-    }
-    
     main {
         margin: 20px 40px;
     }
@@ -674,10 +655,7 @@ label[for="menu-bar"]  {
 
     @media (max-width: 1002px) and (min-width: 810px) {
 
-    body {
-        height: 590vh;
-    }
-       
+  
     h3 {
         text-align: center;
         color: var(--primary-color);
@@ -693,8 +671,6 @@ label[for="menu-bar"]  {
             justify-content: space-around;
            
         }
-
-        
 
         p {
             
@@ -735,8 +711,4 @@ label[for="menu-bar"]  {
             transform: translate(-50%, -50%);
         }
     
-        body {
-            height: 960vh;
-        }
-       
     }
