--- a/style.css/program.css
+++ b/style.css/program.css
@@ -13,8 +13,10 @@
 body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
-    background-repeat: no-repeat;
-    height: 310vh;
+    background-position: center center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
     font-family: 'Roboto', "Open sans", sans-serif;
 }
 
@@ -197,11 +199,8 @@ label[for="menu-bar"]  {
         flex-direction: row;
         justify-content: space-between;
         max-width: 100%;
-   
     }
 
-
- 
     header .navbar ul li {
         position: relative;
     }
@@ -213,10 +212,7 @@ label[for="menu-bar"]  {
         font-weight: 1000;
         font-size: 1.7rem;
         white-space: nowrap;
-        
-      
     }
-
 
 
     .logo {
@@ -255,10 +251,7 @@ label[for="menu-bar"]  {
         color: var(--primary-color);
     }
    
-    body {
-        height: 345vh;
-    }
-    
+   
     
     h1 {
         font-size: 3rem;
@@ -268,16 +261,13 @@ label[for="menu-bar"]  {
     }
 
     
-    
     header {
         padding: 10px 20px 10px 10px;
         display: flex;
         justify-content: end;
       
         } 
-
-    
-                
+   
         header .navbar {
         display: none;
         flex-direction: column;
@@ -365,79 +355,70 @@ label[for="menu-bar"]  {
             text-align: left;
             background-color: var(--primary-color);
             color: var(--secondary-color);
-            margin: 0;
-        
-            
-          
+            margin: 0; 
         }
         
     
         
-    header .navbar ul li a:active + ul,
-    header .navbar ul li a:focus + ul {
-        display: block; /* Viser dropdown på klik i mobil */
-       
-    }
+        header .navbar ul li a:active + ul,
+        header .navbar ul li a:focus + ul {
+            display: block; /* Viser dropdown på klik i mobil */
+        }
 
-    header .navbar ul li:hover > ul {
-        display: none; /* Hover er slået fra i mobilvisning */
-    }
+        header .navbar ul li:hover > ul {
+            display: none; /* Hover er slået fra i mobilvisning */
+        }
                 
 
-    p {
-        text-align: start;
-        font-size: 1.7rem;
-        margin: 20px 90px;
-    }
+        p {
+            text-align: start;
+            font-size: 1.7rem;
+            margin: 20px 90px;
+        }
 
-    .event {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, auto);
-        margin-top: 30px;
-    }
+        .event {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(2, auto);
+            margin-top: 30px;
+        }
 }
 
 
     
 
-    @media (max-width: 610px) {
+@media (max-width: 610px) {
    
-        body {
-            height: 300vh;
-        }
-        .footer {
       
-            
+        .footer {
             padding: 10px;
-             }
+        }
                          
-             #logo {
-             display: none;
-             }
+        #logo {
+            display: none;
+        }
                          
-             #adresse {
+        #adresse {
              width: 40%;
              margin-top: -16px;
              margin-left: 10px;
-             }
+        }
                          
                          
-             #insta {
+        #insta {
              width: 100%;
-             }
+        }
        
             }
     
  @media (max-width: 478px) {
    
-    body {
-        height: 245vh;
-    }
+    
     
     main {
         margin: 20px 0px;
     }
+
     h1 {
         font-size: 2.7rem;
         margin-top: 250px;
@@ -460,20 +441,14 @@ label[for="menu-bar"]  {
 
     @media (max-width: 1002px) and (min-width: 810px) {
 
-    body {
-        height: 170vh;
-    }
-       
+     
         header .navbar ul {
             list-style-type: none;
             display: flex;
             flex-wrap: nowrap;
             flex-direction: row;
             justify-content: space-around;
-           
         }
-
-        
 
         p {
             text-align: start;
@@ -495,7 +470,6 @@ label[for="menu-bar"]  {
 
     @media (min-width: 1003px) {
       
-       
         p {
             font-size: 2rem;
             font-weight: 450;
@@ -512,8 +486,5 @@ label[for="menu-bar"]  {
             transform: translate(-50%, -50%);
         }
     
-        body {
-            height: 330vh;
-        }
        
     }
