--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -15,6 +15,7 @@ body {
     background-size: cover;
     background-position:top;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-color: black;
     height: 100vh;
     font-size: 2rem;
@@ -23,7 +24,7 @@ body {
 
 header {
     position: relative;
-    height: 84vh;
+    height: 100vh;
 }
 
 .logo {
@@ -296,12 +297,7 @@ label[for="menu-bar"]  {
         margin-top: 170px;
         }
    
-    header {
-        padding: 10px 20px 10px 0px;
-        display: flex;
-        justify-content: end;
-        height: 80vh;
-        } 
+   
 
        
                 
@@ -482,15 +478,7 @@ label[for="menu-bar"]  {
     
  @media (max-width: 478px) {
    
-    body {
-        background-image: url(../img/landingp.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-color: black;
-        width: 110%;
-        font-size: 1rem;
-        font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+  
     
     main {
         margin: 20px 60px;
@@ -670,10 +658,7 @@ label[for="menu-bar"]  {
         margin: 20px 0px;
     }
 
-    header {
-        position: relative;
-        height: 100vh;
-    }
+  
 
     .logo {
         position: absolute;
@@ -683,5 +668,7 @@ label[for="menu-bar"]  {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
+    
 
 }
