kommentar på html

--- a/style.css/billet.css
+++ b/style.css/billet.css
@@ -53,6 +53,7 @@ p {
     margin: 50px 150px;
 }
 
+/*herunder ses min css af formen hvor man kan købe billet*/
 .koeb {
     max-width: 700px;
     margin: 20px auto;
@@ -330,7 +331,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
 
         }
@@ -578,5 +578,6 @@ label[for="menu-bar"]  {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
 
 }
