--- a/style.css/program.css
+++ b/style.css/program.css
@@ -10,6 +10,7 @@
     --primary-color: #ff00d9;
     --secondary-color:#0040ff;
 }
+/*denne laver baggrunden*/
 body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
@@ -64,6 +65,7 @@ p {
     
 }
 
+/*brugt grid så jeg kan lave kolonner og rækker*/
 .event {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
@@ -277,7 +279,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
 
         }
