--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Roboto+Mono:ital,wght@0,100;200;300;400;500;600;700&display=swap');
 
 * {
     margin: 0;
@@ -10,12 +10,13 @@
     --primary-color: #ff00d9;
     --secondary-color:#0040ff;
 }
+
+/*min body med baggrundsbilledet*/
 body {
     background-image: url('/img/landingp.png');
     background-size: cover;
     background-position:top;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-color: black;
     height: 100vh;
     font-size: 2rem;
@@ -27,6 +28,7 @@ header {
     height: 100vh;
 }
 
+/*sat i position absoulute så logoet forbliver samme sted*/
 .logo {
     position: absolute;
     width: 300px;
@@ -35,6 +37,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%); 
 }
+
 
 .billede2 {
     text-align: center;
@@ -60,7 +63,7 @@ header {
 }
  
    
-
+/*generelle redigering af nyhedsbrevets form*/
 form.nyhedsbrev input#email, input#fornavn {
         display: block;
         font-weight: bold;
@@ -95,8 +98,9 @@ form.nyhedsbrev input::placeholder, input ::placeholder {
 
 
 
-.betingelser p {
+.betingelser {
     font-size: 1rem;
+    margin: 20px;
    
 }
 
@@ -297,7 +301,11 @@ label[for="menu-bar"]  {
         margin-top: 170px;
         }
    
-                
+        header {
+            padding: 10px 20px 10px 10px;
+            display: flex;
+            justify-content: end;
+        }
      header .navbar {
         display: none;
         flex-direction: column;
@@ -307,7 +315,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
         }
                 
@@ -321,6 +328,7 @@ label[for="menu-bar"]  {
                 
         #menu-bar:checked ~ nav.navbar {
         display: flex;
+
         }
                 
         .menubillede {
@@ -523,7 +531,7 @@ label[for="menu-bar"]  {
             margin: 10px 0px;
         }
 
-    #instaskrift {
+    #instatekst {
             margin-top: 100px;
             margin-bottom: 0;
         }
