--- a/style.css/historie.css
+++ b/style.css/historie.css
@@ -20,6 +20,7 @@ body {
     font-family: 'Roboto', "Open sans", sans-serif;
 }
 
+/*logo redigering*/
 .logo {
     position: absolute;
     width: 300px;
@@ -61,11 +62,8 @@ h2 {
 }
 
 
-.vaerdier p{
-    margin-top: 0px;   
-}
-
-#stor {
+/*redigering af de store bogstaver*/
+.stor {
     margin-top: -160px;
     font-size: 6rem;
     margin-left: 350px;
@@ -270,7 +268,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
 
         }
@@ -355,7 +352,7 @@ label[for="menu-bar"]  {
          font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
         }
 
-    #stor {
+    .stor {
         margin-top: -94px;
         font-size: 3rem;
         margin-left: 226px;
@@ -402,7 +399,7 @@ label[for="menu-bar"]  {
             margin-left: 68px;
             font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
         }
-        #stor {
+        .stor {
             margin-top: -72px;
             font-size: 2.5rem;
             margin-left: 169px;
@@ -463,7 +460,7 @@ label[for="menu-bar"]  {
         margin-left: 64px;
         font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
     }
-    #stor {
+    .stor {
         margin-top: -46px;
         font-size: 1.5rem;
         margin-left: 132px;
@@ -502,7 +499,7 @@ label[for="menu-bar"]  {
             font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
         }
 
-        #stor {
+        .stor {
             margin-top: -122px;
             font-size: 4rem;
             margin-left: 310px;
@@ -552,7 +549,7 @@ label[for="menu-bar"]  {
         font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
     }
 
-    #stor {
+    .stor {
        
         margin-left: 270px;
     }
