--- a/style.css/info.css
+++ b/style.css/info.css
@@ -78,6 +78,7 @@ h3 {
 }
 
 
+/*ikonerne*/
 
 .ikoner {
    display: grid;
@@ -91,6 +92,7 @@ h3 {
    border-bottom: 2px solid var(--primary-color);
 }
 
+/*ikonerne som billede*/
 .ikoner img {
     width: 90%;
     height: auto;
@@ -113,6 +115,7 @@ h3 {
     width: 14%;
 }
 
+/*sat i flex direction*/
 article#person, #ticket, #priser, #lokation, #garderobe, #drikkevare {
     display: flex;
     flex-direction: column;
@@ -435,7 +438,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
 
         }
