--- a/style.css/stot.css
+++ b/style.css/stot.css
@@ -65,7 +65,7 @@ h2 {
     
 }
 
-
+/*cirklernes positionering*/
 
 #circle1, #circle5 {
     margin-top: -350px;
@@ -106,6 +106,7 @@ section.cirkler {
     align-items: center;
 }
 
+/*pop up funktionen*/
 .popup {
     display: none;
     position: absolute;
@@ -378,7 +379,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
 
         }
@@ -537,7 +537,7 @@ label[for="menu-bar"]  {
             transform: translate(-50%);
             background: #8099e4ed;
             border: 1px solid var(--secondary-color);
-            padding: -9px;
+            padding: 0px;
             border-radius: 0px;
             box-shadow: 0 2px 5px var(--secondary-color);
             z-index: 10;
