--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -78,6 +78,7 @@ h6 {
    
 }
 
+/*spotify redigeringen*/
 .spotify {
    display: flex;
    flex-direction: column;
@@ -89,7 +90,7 @@ h6 {
 
 .spotify iframe {
     width: 71%;
-    height: 352;
+    height: 352px;
     border-radius: 12px;
    
 }
@@ -120,6 +121,8 @@ h6 {
     color: var(--primary-color);
 }
 
+
+/*konkurrencen på instagram*/
 
 .konkurrence {
     display: flex;
@@ -372,7 +375,6 @@ label[for="menu-bar"]  {
         width: 320px;
         position: absolute;
         top: 60px;
-        left: 10;
         box-sizing: border-box;
 
         }
